--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -18,3 +18,11 @@ spring:
 logging:
   level:
     org.hibernate.SQL: debug
+server:
+  ssl:
+    key-alias: test
+    key-store: classpath:test.p12
+    key-store-type: PKCS12
+    key-store-password: hclee123
+  http2:
+    enabled: true
