--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,16 +8,14 @@
 		"start": "next start"
 	},
 	"dependencies": {
-		"@types/js-cookie": "^2.2.6",
 		"axios": "^0.21.1",
 		"date-fns": "^2.11.1",
 		"gray-matter": "^4.0.2",
-		"js-cookie": "^2.2.1",
 		"jwt-decode": "^3.1.2",
 		"next": "^10.0.0",
+		"nprogress": "^0.2.0",
 		"react": "^17.0.1",
 		"react-dom": "^17.0.1",
-		"reactstrap": "^8.8.1",
 		"recoil": "^0.1.2",
 		"remark": "^12.0.0",
 		"remark-html": "^12.0.0",
