--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
 		"nprogress": "^0.2.0",
 		"react": "^17.0.1",
 		"react-dom": "^17.0.1",
+		"react-quill": "^1.3.5",
 		"recoil": "^0.1.2",
 		"remark": "^12.0.0",
 		"remark-html": "^12.0.0",
